xrandr: dump configuration in parsable format
This patch adds the command line switch "--dump" to the xrandr program.
When specified, xrandr outputs the current display configuration in an
easily parsable format similar to the command line options accepted by
xrandr itself. That way, an existing configuration can easily be saved
and restored later.

Signed-off-by: Stefan Tomanek <stefan.tomanek@wertarbyte.de>

--- a/man/xrandr.man
+++ b/man/xrandr.man
@@ -26,6 +26,7 @@ xrandr \- primitive command line interface to RandR extension
 .B "xrandr"
 [\-help]  [\-display \fIdisplay\fP]
 [\-q] [\-v]
+[\-\-dump]
 [\-\-verbose]
 [\-\-dryrun]
 [\-\-screen \fIsnum\fP]
@@ -110,6 +111,8 @@ reported while executing the configuration changes.
 .IP "\-q, \-\-query"
 When this option is present, or when no configuration changes are requested,
 xrandr will display the current state of the system.
+.IP "\-\-dump"
+Dump the current display configuration in an easily parsable format.
 .IP "\-\-dryrun"
 Performs all the actions specified except that no changes are made.
 .IP "\-\-nograb"
